added background image, sinhala, tamil languages

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 base="dark"
-primaryColor="#63b547"
-backgroundColor="#2d5616"
-secondaryBackgroundColor="#506934"
+primaryColor="#263FAC"
+backgroundColor="#091338"
+secondaryBackgroundColor="#6382F1"
 font="serif"
 
